objects/Telephone_Number__c/Telephone_Number__c.object-meta.xml
<CustomObject>
    <label>Telephone Number</label>
    <nameField>
        <displayFormat>TN-{0000}</displayFormat>
        <label>Telephone Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telephone Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>