objects/Telephone_Number__c/fields/Anonymous_Call_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Call_Rejection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymous Call Rejection</label>
    <type>Checkbox</type>
</CustomField>