objects/Telephone_Number__c/fields/Call_Blocking_900_976__c.field-meta.xml
<CustomField>
    <fullName>Call_Blocking_900_976__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Blocking 900/976</label>
    <type>Checkbox</type>
</CustomField>