objects/Telephone_Number__c/fields/Call_Blocking_International__c.field-meta.xml
<CustomField>
    <fullName>Call_Blocking_International__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Blocking International</label>
    <type>Checkbox</type>
</CustomField>