objects/Telephone_Number__c/fields/Call_Forward_No_Answer__c.field-meta.xml
<CustomField>
    <fullName>Call_Forward_No_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Forward No Answer</label>
    <type>Checkbox</type>
</CustomField>