objects/Telephone_Number__c/fields/Call_Forward_Variable_72__c.field-meta.xml
<CustomField>
    <fullName>Call_Forward_Variable_72__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Forward Variable *72</label>
    <type>Checkbox</type>
</CustomField>