objects/Telephone_Number__c/fields/Call_Forwarding_Group_No_Answer__c.field-meta.xml
<CustomField>
    <fullName>Call_Forwarding_Group_No_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Forwarding Group No Answer</label>
    <type>Checkbox</type>
</CustomField>