objects/Telephone_Number__c/fields/Call_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Call_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Transfer</label>
    <type>Checkbox</type>
</CustomField>