objects/Telephone_Number__c/fields/Call_Waiting__c.field-meta.xml
<CustomField>
    <fullName>Call_Waiting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Waiting</label>
    <type>Checkbox</type>
</CustomField>