objects/Telephone_Number__c/fields/Call_Waiting_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_Waiting_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Waiting ID</label>
    <type>Checkbox</type>
</CustomField>