objects/Telephone_Number__c/fields/Caller_ID_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Caller_ID_Name_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caller ID Name &amp; Number</label>
    <type>Checkbox</type>
</CustomField>