objects/Telephone_Number__c/fields/Caller_ID_Number_Only__c.field-meta.xml
<CustomField>
    <fullName>Caller_ID_Number_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caller ID Number Only</label>
    <type>Checkbox</type>
</CustomField>