objects/Telephone_Number__c/fields/CallForwardBusy__c.field-meta.xml
<CustomField>
    <fullName>CallForwardBusy__c</fullName>
    <label>Call Forward Busy</label>
    <type>Phone</type>
</CustomField>