objects/Telephone_Number__c/fields/CallForwardNoAnswer__c.field-meta.xml
<CustomField>
    <fullName>CallForwardNoAnswer__c</fullName>
    <label>Call Forward No Answer</label>
    <type>Phone</type>
</CustomField>