objects/Telephone_Number__c/fields/Continuous_Redial_66__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Redial_66__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Continuous Redial *66</label>
    <type>Checkbox</type>
</CustomField>