objects/Telephone_Number__c/fields/DSL_Broadband_Line__c.field-meta.xml
<CustomField>
    <fullName>DSL_Broadband_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DSL/Broadband Line</label>
    <type>Checkbox</type>
</CustomField>