objects/Telephone_Number__c/fields/Forwarding_Numbers_CFB__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Numbers_CFB__c</fullName>
    <label>Forwarding Numbers CFB</label>
    <type>TextArea</type>
</CustomField>