objects/Telephone_Number__c/fields/Forwarding_Numbers_CFB_NA__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Numbers_CFB_NA__c</fullName>
    <label>Forwarding Numbers CFB/NA</label>
    <type>TextArea</type>
</CustomField>