objects/Telephone_Number__c/fields/Hunting__c.field-meta.xml
<CustomField>
    <fullName>Hunting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hunting</label>
    <type>Checkbox</type>
</CustomField>