objects/Telephone_Number__c/fields/Hunting_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Hunting_Sequence__c</fullName>
    <label>Hunting Sequence</label>
    <length>3</length>
    <type>Text</type>
</CustomField>