objects/Telephone_Number__c/fields/Speed_Call_30__c.field-meta.xml
<CustomField>
    <fullName>Speed_Call_30__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speed Call 30</label>
    <type>Checkbox</type>
</CustomField>